# OpenGL_Application

./: CMakeLists.txt  OpenGL_Application.cpp  OpenGL_Application.h  README.md
src/: Application.cpp  Application.h
src/OpenGL/: Camera.h  DolphinGL.h  Gl_Common.h  IndexBuffer.h  Shader.cpp  Shader.h  ShaderStorageBuffer.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.h
src/Tests/: SimpleTriangle.cpp  SimpleTriangle.h  Test.h
src/Tests/Resources/Shaders/: simpleFragmentShader.frag  simpleVertexShader.vert
